# PauLie

./: .buildinfo  .gitignore  Collision_prob+TVD+Comm_graph.old  Collision_prob+TVD+Comm_graph.py  README.md  animateCanonic.py  average_graph_complexity.html  classification.html  classifyAlgebras.py  commutator_graph.html  draft.py  exempleNested.py  exemplePauli.py  genindex.html  getting_started.html  index.html  matrix_decomposition.html  momentumAlgebras.py  nested.py  objects.inv  plotCanonic.py  pyproject.toml  requirements.txt  scratch.py  search.html  searchindex.js  second_moment.html  test.py  testalgebras.py  testold.py  testsizetime.py  theorem1.py
.github/workflows/: documentation.yml  tests.yml
__build/doctrees/: animateCanonic.doctree  index.doctree  modules.doctree
_sources/: average_graph_complexity.rst.txt  commutator_graph.rst.txt
classifier/: drawing.py  graphView.py  recording.py  shape.py  subgraphs.py  transform.py
common/: 2local.py  algebras.py  commutatorGrapth.py  compGraph.py  ext2local.py  extKlocal.py  generator.py  nested.py  pauli.py  stateGraph.py  symmetries.py  testsize.py
common/storage/: EdgeStorage.py
common/storage/impl/: EdgeStorageArray.py
docs/source/: animateCanonic.rst  average_graph_complexity.rst  average_otoc.rst  classification.rst  commutator_graph.rst  conf.py  getting_started.rst  index.rst  intro_tutorial.rst  matrix_decomposition.rst  modules.rst  plotCanonic.rst  second_moment.rst
docs/source/media/: animation3Graph.html  example_a.html  example_b.html  example_problem.html
env/: pyvenv.cfg
examples/: 2local.py  3local.py  AllGenerators.py  AllNodes.py  Animation3Graph.py  AnimationGraph.py  ArticleExampes.py  Classify.py  Classify3Local.py  GraphViewSubs.py  NestedA3.py  PauliCommutator.py  Plot3Cannic.py  Plot3Canonic.py  PlotGraph.py  PlotNested.py  PlotNeted.py  SubgraphExample.py  animateCanonic.py  animation_3graph.py  animation_graph.py  animation_graph_docs.py  article_exampes.py  check_nested.py  classifyAlgebras.py  classify_3_local.py  classify_algebras.py  classify_generator.py  debug_classifier.py  factory_pauli_string.py  pauli_compiler.py  pauli_string_parser.py  performence_check.py  plotCanonic.py  plot_3_canonic.py  plot_graph.py  plot_nested.py  recording_classifier.py  theorem1.py
examples/data/: example_a.html  example_b.html
exemples/: exemple2local.py  exemple3local.py  exempleAllGenerators.py  exempleAllNodes.py  exempleAnimationGraph.py  exempleClassify.py  exempleClassify3local.py  exempleGraphView.py  exempleNested.py  exemplePauli.py  exemplePlot3Canonic.py  exemplePlotGraph.py  exemplePlotNested.py  exempleSubgraphs.py
graphs/: graphView.py  subgraphs.py
src/: paper.md
src/PauLie/: __init__.py
src/PauLie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PauLie/classifier/: shape.py  transform.py
src/PauLie/common/: 2local.py  algebras.py  extKlocal.py  nested.py  pauli.py
src/PauLie/graphs/: graphView.py  subgraphs.py
src/PauLie/helpers/: drawing.py  printing.py  recording.py
src/PauLie/stuff/: drawing.py  recording.py
src/paulie/application/: animation.py  average_pauli_weight.py  charges.py  classify.py  graph_complexity.py  matrix_decomposition.py  otoc.py  pauli_compiler.py  pauli_compiler_optimal.py  plot.py  reach.py  second_moment.py
src/paulie/classifier/: classification.py  classify.py  morph_factory.py  recording_morph_factory.py  shape.py  transform.py
src/paulie/common/: algebras.py  all_pauli_strings.py  bitarray_pauli_string.py  ext_k_local.py  get_graph.py  nested.py  np_pauli_string.py  pauli.py  pauli_string.py  pauli_string_bitarray.py  pauli_string_collection.py  pauli_string_factory.py  pauli_string_generators.py  pauli_string_linear.py  pauli_string_parser.py  random_pauli_strings.py  two_local_generators.py
src/paulie/graphs/: graph_view.py
src/paulie_classify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
stuff/: drawing.py  printing.py  recording.py
tests/: classify_two_local_algebras.py  pauli_compiler.py  test_1.py  test_Klocal.py  test_average_graph_complexity.py  test_average_pauli_weight.py  test_charges.py  test_classification.py  test_commutator.py  test_k_local.py  test_matrix_decomposition.py  test_nested.py  test_otoc.py  test_pauli.py  test_pauli_compiler.py  test_pauli_compiler_optimal.py  test_second_moment.py  test_subgraphs.py
(+18 files in other folders)
