[tool.poetry]
name = "paulie"
version = "0.0.1"
description = "Classification of Lie algebras"
authors = [
    "Oxana Shaya <shayaoxana@gmail.com>",
    "Konstantin Golovkin",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^2.2.2"
networkx = "^3.3"
bitarray = "^3.0.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.10.0"
ruff = "^0.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
sphinx = "^8.1.3"

[tool.ruff]
exclude = ["submodules"]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
